@@ -64,7 +64,7 @@ class ResultSetAccessor {
 				String label = metaData.getColumnLabel(i);
 
 				if (index.containsKey(label)) {
-					LOG.warn(String.format("ResultSet contains %s multiple times", label));
+					LOG.warn("ResultSet contains %s multiple times".formatted(label));
 					continue;
 				}
 
@@ -92,7 +92,7 @@ class ResultSetAccessor {
 			int index = findColumnIndex(columnName);
 			return index > 0 ? JdbcUtils.getResultSetValue(resultSet, index) : null;
 		} catch (SQLException o_O) {
-			throw new MappingException(String.format("Could not read value %s from result set", columnName), o_O);
+			throw new MappingException("Could not read value %s from result set".formatted(columnName), o_O);
 		}
 	}
 
