@@ -83,7 +83,7 @@ public abstract class ExternalDatabase implements BeforeAllCallback {
 	public void beforeAll(ExtensionContext context) {
 
 		if (!checkValidity()) {
-			throw new TestAbortedException(String.format("Cannot connect to %s. Skipping tests.", this));
+			throw new TestAbortedException("Cannot connect to %s. Skipping tests.".formatted(this));
 		}
 	}
 
