@@ -56,7 +56,7 @@ public class H2Dialect extends AbstractDialect {
 
 		@Override
 		public String getLimitOffset(long limit, long offset) {
-			return String.format("OFFSET %d ROWS FETCH FIRST %d ROWS ONLY", offset, limit);
+			return "OFFSET %d ROWS FETCH FIRST %d ROWS ONLY".formatted(offset, limit);
 		}
 
 		@Override
